# pi4py

./: .gitignore  MANIFEST.in  README.md  pi4py_build_backend.py  pyproject.toml
src/pi4py/: __init__.py  _launcher.py  _nodejs.py  _pi.py  _runtime.py
src/pi4py/_shim/: corepack  corepack.cmd  node  node.cmd  npm  npm.cmd  npx  npx.cmd
tools/: prune_npm_runtime.py  update_pi_version.py
